# blogbotbob

./: .env.example  .gitignore  README.md  comfy_workflow.json  config.yaml  personas.yaml  pyproject.toml
.github/workflows/: test.yml
plan/: 00-MASTER-PLAN.md  01-PROJECT-SETUP.md  02-DATA-MODELS.md  03-LLM-LAYER.md  04-SCRAPER-AGENT.md  05-ANALYSIS-AGENT.md  06-GENERATION-AGENT.md  07-AUDIENCE-PANEL.md  08-IMAGE-AGENT.md  09-APPROVAL-QUEUE.md  10-PUBLISHER.md  11-PIPELINE-CLI.md  12-TESTS.md  13-SCHEDULER-DEPLOY.md  14-VERIFY.md
scripts/: run_pipeline.bat
src/blogbot/: cli.py  config.py  db.py  models.py  setup_wizard.py
src/blogbot/agents/: __init__.py  analysis.py  generation.py  imagery.py  panel.py  scraper.py
src/blogbot/llm/: anthropic_client.py  base.py  ollama_client.py  router.py
src/blogbot/publish/: wordpress.py
src/blogbot/sources/: base.py  hackernews.py  linkedin.py  reddit.py  rss.py  twitter.py
tests/: conftest.py  test_config.py  test_db.py  test_generation.py  test_llm.py  test_panel.py  test_setup_wizard.py  test_sources.py  test_wordpress.py
tests/fixtures/: feed.xml
