[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blogbotbob"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "praw>=7.7",
    "anthropic>=0.40",
    "python-frontmatter>=1.1",
    "typer>=0.12",
    "markdown>=3.6",
]

[project.scripts]
blogbot = "blogbot.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
